初期背景色を白に

--- a/src/app/quote/quote.component.css
+++ b/src/app/quote/quote.component.css
@@ -6,7 +6,7 @@
     width: 450px;
     padding: 40px 50px;
     display: table;
-    background-color: #eee;
+    background-color: white;
 }
 
 .quote-text{
