quote.componentにコメント追加

--- a/src/app/quote/quote.component.html
+++ b/src/app/quote/quote.component.html
@@ -1,6 +1,6 @@
 <blockquote [@toggleState]="shouldToggle"
     class="container"
-    [style.color]="randomColor"
+    [style.color]="appColor"
 >
     <p class="quote-text">
         {{this.quote.quote}}
